--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <!-- Addition of two number -->
   <center>
 	  <h1>Addition of two Number</h1>
-	  <input type="text" name="" id="firstNum" placeholder="Enter First Number">
+	  <input type="number" name="" id="firstNum" placeholder="Enter First Number" required>
 	  <br>
-	  <input type="text" name="" id="secondNum" placeholder="Enter Second Number">
+	  <input type="number" name="" id="secondNum" placeholder="Enter Second Number" required>
 	  <br>
 	  <button onclick="getSum()">Calculate Sum</button>
 	  <h2 id="result"></h2>
