--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body oncontextmenu="return false">
+
 	<script src="script.js">
 
 	</script>
