--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Addition of two Number</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="shortcut icon" href="./JavaScript-Tutorial.svg" type="image/x-icon">
+
 </head>
 
 <body oncontextmenu="return false">
