--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
+	<meta name ="theme-color" content="#000000">
 	<title>Addition of two Number</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="./JavaScript-Tutorial.svg" type="image/x-icon">
