--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 	<title>Addition of two Number</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="./JavaScript-Tutorial.svg" type="image/x-icon">
+	<!-- HTML Meta Tags -->
+	<meta name="description" content="Simple Javascript project to calculate addition of two number">
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://shubhamashish33.github.io/addition/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Addition of two Number">
+	<meta property="og:description" content="Simple Javascript project to calculate addition of two number">
+	<meta property="og:image" content="https://i.ibb.co/XszK91W/profile-pic-6-Custom.png">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="shubhamashish33.github.io">
+	<meta property="twitter:url" content="https://shubhamashish33.github.io/addition/">
+	<meta name="twitter:title" content="Addition of two Number">
+	<meta name="twitter:description" content="Simple Javascript project to calculate addition of two number">
+	<meta name="twitter:image" content="https://i.ibb.co/XszK91W/profile-pic-6-Custom.png" ">
 
 </head>
 
